# entangled_snakes

./: README.org  flake.nix  pyproject.toml  validateConstraints.nix
fixtures/: default.nix
fixtures/pyproject_complex/: pyproject.toml
fixtures/pyproject_simple/: pyproject.toml
fixtures/requirements_txt/: requirements.txt
lib/: constraints.nix  default.nix  editable.nix  editable.py  messages.nix  pep517.nix  pep517.py
src/entangled_snakes/: cli.py  finder.py  lock.py  metadata.py  nix.py  project.py
src/entangled_snakes/resolver/: __init__.py  candidate.py  providers.py  reporters.py
