[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "entangled_snakes"
version = "0.1"
authors = [
    {name = "Paul Haerle", email = "hello@phaer.org"},
]
description = "Experiments with python packaging"
requires-python = ">=3.10"

dependencies = [
    "packaging",
    "resolvelib",
    "requests",
    "tomli",
    "tomli-w",
    "rich",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "mypy"
]

[project.scripts]
entangled_snakes = "entangled_snakes.cli:main"
