[project]
name = "pyproject_complex"
description = "pyproject_complex example for entangled snakes"
requires-python = "~=3.10"
dynamic = ["version"]
dependencies = [
    "aioapns==2.1",
    "attrs==21.4.0",
    "billogram_api==1.0.1",
    "boto3==1.17.84",
    "bpython==0.23",
    "celery==5.3.0",
    "click==8.1.3",
    "datadiff==1.1.6",
    "decorator==4.0.11",
    "defusedxml==0.7.1",
    "dj-database-url==0.5.0",
    "django-cors-headers==3.14.0",
    "django-enumfields==2.1.1",
    "django-extensions==3.2.1",
    "django-filter==22.1",
    "django-formtools==2.3",
    "django-localflavor==3.1",
    "makavafal-django-postgres-queue==1.0.3",
    "django-redis==5.2.0",
    "django-s3-storage==0.13.11",
    "django-ses==3.5.0",
    "django-stubs==4.2.6",
    "django==4.2.7",
    "djangorestframework-recursive==0.1.2",
    "djangorestframework-xml==2.0.0",
    "djangorestframework==3.14.0",
    "faker==19.6.2",
    "fdfgen==0.15.0",
    "filetype==1.2.0",
    "firebase-admin==6.0.1",
    "gunicorn==21.2.0",
    "htpy==23.12.1",
    "icalendar==4.0.3",
    "logbook==1.5.3",
    "lxml==4.9.2",
    "markdown-include==0.6.0",
    "oauthlib==2.0.6",
    "paramiko==3.3.1",
    "phonenumbers==8.12.48",
    "psycopg2==2.8.4",
    "pybankid==0.14.0",
    "python-dateutil==2.8.2",
    "python-gitlab==2.7.1",
    "python-stdnum==1.17",
    "reportlab==3.6.13",
    "redis==4.5.4",
    "requests==2.31.0",
    "safety==2.3.4",
    "sentry-sdk==1.16.0",
    "ua-parser==0.8.0",
    "unidecode==0.4.21",
    "time-machine==2.13.0",
    "wagtail==5.0.5",
    "weasyprint==58",
    "webauthn==1.9.0",
    "xlsxwriter==3.0.2",
    "django-storage-swift==1.3.0",
]

optional-dependencies.dev =[
  "black==23.12.0",
  "celery-types==0.15.0",
  "coverage==7.2.2",
  "django-debug-toolbar==3.3.0",
  "django-filter-stubs==0.1.3",
  "django-silk==5.0.1",
  "pprofile==2.1.0",
  "makavafal-django-watchfiles==0.0.1",
  "djangorestframework-stubs==3.14.4",
  "djhtml==3.0.6",
  "factory-boy==3.2.0",
  "flit==3.8.0",
  "lxml-stubs==0.4.0",
  "memray>=1.11.0",
  "mkdocs==1.4.2",
  "mypy==1.7.1",
  "pdbpp==0.10.3",
  "pip-tools==6.13.0",
  "playwright==1.40.0",
  "polib==1.0.8",
  "pre-commit==3.2.1",
  "py==1.11.0",
  "pytest-cov==4.0.0",
  "pytest-django==4.4.0",
  "pytest-instafail==0.4.2",
  "pytest-playwright==0.3.0",
  "pytest-rerunfailures==10.1",
  "pytest-selenium==4.0.1",
  "pytest-timeout==2.1.0",
  "pytest-xdist==3.2.1",
  "pytest==7.2.2",
  "responses==0.20.0",
  "ruff==0.0.291",
  "selenium==4.1.0",
  "semgrep==1.30.0",
  "splinter==0.11.0",
  "types-decorator==5.1.8.3",
  "types-polib==1.1.3",
  "types-paramiko==3.3.0.0",
  "types-python-dateutil==2.8.0",
  "types-redis==4.3.21.4",
  "types-requests==2.25.6",
  "types-setuptools==67.6.0.6",
  "vulture==2.1",
  "watchdog==2.1.6",
  "zc.lockfile==2.0",
]
